Fixxing issue with social network display on smaller devices.

--- a/assets/css/scss/2013.scss
+++ b/assets/css/scss/2013.scss
@@ -375,6 +375,16 @@ blockquote{
 
 #socialnetworks {
 	width: 100%;
+    
+    li{
+        list-style: none;
+        display: inline-block;
+        vertical-align: middle;
+        margin: 10px 20px;
+        width: 160px;
+        text-align:center;
+    }    
+    
 	img{
 		border-radius: 0;
 		border: none;
